k8s/ingress/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s-multi-veiga.com
        - www.k8s-multi-veiga.com
      secretName: k8s-multi-veiga-com
  rules:
    - host: k8s-multi-veiga.com
      http:
          paths:
            - path: /?(.*) 
              pathType: ImplementationSpecific
              backend:
                service:
                  name: client-cluster-ip-service
                  port: 
                    number: 3000
            - path: /api/?(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: server-cluster-ip-service
                  port: 
                    number: 5000
    - host: www.k8s-multi-veiga.com
      http:
          paths:
            - path: /?(.*) 
              pathType: ImplementationSpecific
              backend:
                service:
                  name: client-cluster-ip-service
                  port: 
                    number: 3000
            - path: /api/?(.*)
              pathType: ImplementationSpecific
              backend:
                service:
                  name: server-cluster-ip-service
                  port: 
                    number: 5000
